fix margin and overlapping

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -367,7 +367,7 @@ a.img-link {
 
   .container-hp #learn, .container-hp #connect,
   .container-hp #integrate, .container-hp #open-source {
-    height: 400px;
+    height: auto;
   }
 
   #footer-cta {
